# scraping

./: main.py  pyproject.toml  settings.ini
beautiful_soup/: __init__.py  soup.py
data/: authors.json
db/: __init__.py  models.py  mongo_connect.py  seeds.py
own_scrapy/: __init__.py  author_spider.py  quotes_spider.py  start_scrapy.py
